--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "electron": "^25.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-table": "^7.8.0",
     "papaparse": "^5.4.1",
     "xlsx": "^0.18.0",
     "docx": "^8.0.0",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
+    "framer-motion": "^7.6.12",
     "concurrently": "^8.2.0",
     "wait-on": "^7.0.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "@heroicons/react": "^2.0.18"
   },
   "devDependencies": {
     "electron-builder": "^23.6.0",
